# work-vps-ban-jinro-log-crawler

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: crawler.py  logcode.py  main.py  module.py  utc_date.py
src/config/: config.py  logger.py  mongodb.py
src/domain/latest_crawled/: latest_crawled_repository.py
src/domain/shared/: village.py  village_cast.py  village_position.py  village_reader.py  village_repository.py
src/exceptions/: exception_handler.py  exceptions.py
src/infrastructure/mongodb/latest_crawled/: latest_crawled_dao.py  latest_crawled_dto.py
src/infrastructure/mongodb/village/: village_dao.py  village_dto.py  village_dto_factory.py
src/infrastructure/reader/: village_web_reader.py
src/infrastructure/reader/parser/: village_parser.py
src/infrastructure/repository/latest_crawled/: latest_crawled_db_repository.py
src/infrastructure/repository/village/: village_db_repository.py
src/infrastructure/web/: ruru.py
tests/: test_app.py  tests_utils.py
tests/data/ut/infrastructure/reader/parser/: 1000.html  100000.html  100359.html  100829.html  118145.html  188951.html  223279.html  223280.html  244433.html  244434.html  255121.html  255122.html  299768.html  346100.html  423501.html  (+6 more)
tests/it/infrastructure/mongodb/latest_crawled/: test_latest_crawled_dao.py
tests/it/infrastructure/mongodb/village/: test_village_dao.py
tests/it/infrastructure/repository/latest_crawled/: test_latest_crawled_db_repository.py
tests/ut/: test_utc_date.py
tests/ut/domain/shared/: test_village_cast.py  test_village_position.py
tests/ut/infrastructure/mongodb/: test_village_dto_factory.py
tests/ut/infrastructure/reader/parser/: test_village_parser.py
tests/ut/infrastructure/web/: test_ruru.py
